# Repo_teacher

./: .gitignore  AGENTS.md  AGENT_README.md  README.md  Repo Tutor UI v2.html  llm_config.example.json  llm_config.json  pyproject.toml  skills-lock.json  start.ps1
.agents/: codex-project-agents-super-strict-prompt.md
.claude/: settings.local.json
backend/: __init__.py  main.py
docs/: 01_deepresearch_long_report_diagnosis_2026-04-20.md  02_deepresearch_long_report_solution_2026-04-20.md  03_deepresearch_long_report_architecture_v1_2026-04-20.md  CURRENT_SPEC.md  PLAN_m5_m6_unlock_teacher_working_log_finished.md  PRD_v1.txt  PRD_v2.md  PRD_v3.md  PRD_v4.md  PRD_v4_agent.md  PRD_v5_agent.md  TUI_README.md  USAGE_GUIDE.md  agent_sdk_refactor_assessment_2026-04-19.md  current_architecture.md  data_contracts.md  data_structure_design_v1.md  data_structure_design_v2.md  data_structure_design_v3.md  interaction_design_v1.md  interface_hard_spec_v1.md  interface_hard_spec_v2.md  interface_hard_spec_v3.md  protocols.md  spec_audit_report_v1.md  spec_audit_report_v2.md  technical_architecture_v1.md  technical_architecture_v2.md  technical_architecture_v3.md  technical_architecture_v4.md
frontend/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
new_docs/: PRD_v6_teaching_first.md  backend_agent_runtime_analysis.md  backend_architecture_analysis.md  backend_chat_data_flow_and_teaching_quality_analysis.md  backend_m6_response_analysis.md  m5_session_architecture_analysis.md  repo_tutor_teaching_agent_solution.md
new_kernel/: AGENTS.md  (+6 more)
(+320 files in other folders)
